# ecs-benchmark

./: .gitmodules  CMakeLists.txt  README.md
src/: EnTT.hpp  EntityX.hpp  OOP.hpp  benchmark.hpp  components.hpp  flecs.hpp  main.cpp  mustache.hpp  open_ecs.hpp  plot.py
